--- a/trash_collector/customers/templates/customers/create.html
+++ b/trash_collector/customers/templates/customers/create.html
@@ -8,14 +8,6 @@
 {% block content %}
   {% if user.is_authenticated %}
     Hello Customer {{ user.username }}!
-    {% for customers in all_customers %}
-      {% if customers == user %}
-        <p>Here is the customer: {{ customers }}</p>
-      {% endif %}
-    {% endfor %}
-  {% else %}
-    <p>You are at the customer index, but you are not logged in.</p>
-    <a href="{% url 'login' %}">Log In</a>
-    <a href="{% url 'accounts:register' %}">Sign Up</a>
+    Please enter in the following information:
   {% endif %}
 {% endblock %}
