--- a/trash_collector/customers/templates/customers/create.html
+++ b/trash_collector/customers/templates/customers/create.html
@@ -1,13 +1,18 @@
 {% extends 'base.html' %}
 {# This top line allows this template to utilizing the styling and layout from the base. All your templates should do the same. #}
 
-{% block title %} Customer Home {% endblock %}
+{% block title %} Customer Account {% endblock %}
 
-{% block header %} Customer Home {% endblock %}
+{% block header %} Create Account{% endblock %}
 
 {% block content %}
-  {% if user.is_authenticated %}
-    Hello Customer {{ user.username }}!
-    Please enter in the following information:
-  {% endif %}
+  <form action="{% url 'customers:create' %}" method="POST">
+    {% csrf_token %}
+    Name:<input type="text" name="name" id="name"><br>
+    Weekly Pickup Day:<input type="text" name="weekly_pickup_day" id="weekly_pickup_day"><br>
+    One Time Pickup Date:<input type="text" name="one_time_pickup" id="one_time_pickup"><br>
+    Address:<input type="text" name="address" id="address"><br>
+    Zip Code:<input type="text" name="zip_code" id="zip_code"><br>
+    <input type="submit" value="Create Account">
+</form>
 {% endblock %}
