--- a/trash_collector/customers/templates/customers/index.html
+++ b/trash_collector/customers/templates/customers/index.html
@@ -1,17 +1,27 @@
 {% extends 'base.html' %}
 {# This top line allows this template to utilizing the styling and layout from the base. All your templates should do the same. #}
 
-{% block title %} Customer Home {% endblock %}
+  {% block title %} Customer Home {% endblock %}
 
-{% block header %} Customer Home {% endblock %}
+  {% block header %} Customer Home {% endblock %}
 
 {% block content %}
+  <center>
   {% if user.is_authenticated %}
-    Hello Customer {{ user.username }}!
-
+    <p>Hello Customer {{ user.username }}!</p>
+    <p>Here is your info:</p>
+    <p>Name: {{ specific_customer.name }}</p>
+    <p>Address: {{ specific_customer.address }}</p>
+    <p>Zip Code: {{ specific_customer.zip_code }}</p>
+    <p>Weekly Pickup Day: {{ specific_customer.weekly_pickup_day }}</p>
+    <p>One-time Pickup: {{ specific_customer.onetime_pickup }}</p>
+    <p>Balance: {{ specific_customer.balance }}</p>
+    <p>Start Break: {{ specific_customer.start_suspension }}</p>
+    <p>End Break: {{ specific_customer.end_suspension }}</p>
   {% else %}
     <p>You are at the customer index, but you are not logged in.</p>
     <a href="{% url 'login' %}">Log In</a>
     <a href="{% url 'accounts:register' %}">Sign Up</a>
   {% endif %}
+  </center>
 {% endblock %}
