--- a/trash_collector/customers/templates/customers/create.html
+++ b/trash_collector/customers/templates/customers/create.html
@@ -10,7 +10,7 @@
     {% csrf_token %}
     Name:<input type="text" name="name" id="name"><br>
     Weekly Pickup Day:<input type="text" name="weekly_pickup_day" id="weekly_pickup_day"><br>
-    One Time Pickup Date:<input type="text" name="one_time_pickup" id="one_time_pickup"><br>
+    One Time Pickup Date:<input type="date" name="one_time_pickup" id="one_time_pickup"><br>
     Address:<input type="text" name="address" id="address"><br>
     Zip Code:<input type="text" name="zip_code" id="zip_code"><br>
     <input type="submit" value="Create Account">
