--- a/trash_collector/employees/templates/employees/index.html
+++ b/trash_collector/employees/templates/employees/index.html
@@ -7,11 +7,14 @@
   {% if user.is_authenticated %}
     Hello Employee {{ user.username }}!
       <table>
-        <tr><th>Customers</th></tr>
+        <tr><th>Today's Customers</th></tr>
         {% for customer in todays_customers %}
         <tr><td>{{customer.name}}</td></tr>
         {% endfor %}
       </table>
+<br><br>
+<p>Want to see which customers have a pickups scheduled on a specific day of the week? Please choose a day below:</p><a href="{%  url 'employees:daily' %}">here!!!!</a>
+
   {% else %}
     <p>You are at the employee index, but you are not logged in.</p>
     <a href="{% url 'login' %}">Log In</a>
