--- a/trash_collector/customers/templates/customers/index.html
+++ b/trash_collector/customers/templates/customers/index.html
@@ -1,33 +1,39 @@
 {% extends 'base.html' %}
 {# This top line allows this template to utilizing the styling and layout from the base. All your templates should do the same. #}
 
-  {% block title %} Customer Home {% endblock %}
-
-  {% block header %} Customer Home {% endblock %}
+{% block title %} Customers Home {% endblock %}
+{% block header %} <h1 class="display-1 text-center">Customers Home</h1> {% endblock %}
 
 {% block content %}
-  <center>
-  {% if user.is_authenticated %}
-    <p>Hello Customer {{ user.username }}!</p>
-    <p>Here is your info:</p>
-    <p>Name: {{ specific_customer.name }}</p>
-    <p>Address: {{ specific_customer.address }}</p>
-    <p>Zip Code: {{ specific_customer.zip_code }}</p>
-    <p>Weekly Pickup Day: {{ specific_customer.weekly_pickup_day }}</p>
-    <p>One-time Pickup: {{ specific_customer.onetime_pickup }}</p>
-    <p>Balance: {{ specific_customer.balance }}</p>
-    <p>Start Break: {{ specific_customer.start_suspension }}</p>
-    <p>End Break: {{ specific_customer.end_suspension }}</p>
-    {% if specific_customer.has_suspension == True %}
-      <p>You are currently in a suspended status!</p>
+  <div class="row">
+    {% if user.is_authenticated %}
+    <div class="col-3"></div>
+    <div class="col-6 text-center h1">
+      <p>Hello Customer {{ user.username }}!</p>
+      <p>Here is your info:</p>
+      <p>Name: {{ specific_customer.name }}</p>
+      <p>Address: {{ specific_customer.address }}</p>
+      <p>Zip Code: {{ specific_customer.zip_code }}</p>
+      <p>Weekly Pickup Day: {{ specific_customer.weekly_pickup_day }}</p>
+      <p>One-time Pickup: {{ specific_customer.onetime_pickup }}</p>
+      <p>Balance: {{ specific_customer.balance }}</p>
+      <p>Start Break: {{ specific_customer.start_suspension }}</p>
+      <p>End Break: {{ specific_customer.end_suspension }}</p>
+      {% if specific_customer.has_suspension == True %}
+        <p>You are currently in a suspended status!</p>
+      {% else %}
+        <p>You are not in a suspended status.</p>
+      {% endif %}
+    </div>
+    <div class="col-3"></div>
     {% else %}
-      <p>You are not in a suspended status.</p>
-    {% endif %}
-    <p></p>
-  {% else %}
-    <p>You are at the customer index, but you are not logged in.</p>
-    <a href="{% url 'login' %}">Log In</a>
-    <a href="{% url 'accounts:register' %}">Sign Up</a>
-  {% endif %}
-  </center>
+    <div class="col-4"></div>
+    <div class="col">
+      <p>You are at the customer index, but you are not logged in.</p>
+      <a href="{% url 'login' %}">Log In</a>
+      <a href="{% url 'accounts:register' %}">Sign Up</a>
+    </div>
+    <div class="col-4"></div>
+      {% endif %}
+  </div>
 {% endblock %}
