--- a/trash_collector/employees/templates/employees/daily.html
+++ b/trash_collector/employees/templates/employees/daily.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %}{% block header %} Employee Home {% endblock %}{% endblock %}
-
+{% block title %} Weekly View{% endblock %}
+{% block header %} <h1 class="display-1 text-center">Weekly View</h1> {% endblock %}
 {% block content %}
 
 <p>Want to see which customers have a pickups scheduled on a specific day of the week? Please choose a day below:</p>
