--- a/trash_collector/employees/templates/employees/index.html
+++ b/trash_collector/employees/templates/employees/index.html
@@ -1,21 +1,22 @@
 
 {% extends 'base.html' %}
 
-{% block title %}{% block header %} Employee Home {% endblock %}{% endblock %}
+{% block title %}Employee Home{% endblock %}
+{% block header %} <h1 class="display-1 text-center">Employee Home</h1> {% endblock %}
 
 {% block content %}
 
   {% if user.is_authenticated %}
-  <div class="container">
+  <!-- <div class="container"> -->
     <div class="row">
-      <div class="col-4 "></div>
-      <div class="col-4 ">
-        <h1 class="">Hello Employee, {{ user.username }}!</h1>
+      <div class="col-4"></div>
+      <div class="col-4">
+        <h1 class="text-center">Hello Employee, {{ user.username }}!</h1>
       <table class="table">
         <thead>
           <tr>
-            <th class="" scope="col" >Today's Customers</th>
-            <th class="" scope="col">Address</th>
+            <th scope="col" >Today's Customers</th>
+            <th scope="col">Address</th>
             <th scope="col"><!-- Confirm Pickup --></th>
           </tr>
         </thead>
@@ -26,12 +27,12 @@
             <td>{{customer.address}}</td>
             {% if customer.last_confirmed_pickup != today %}
               <td>
-                    <button type="button" disabled>Confirm Pickup</button>
+                    <button type="button" class="form-control" disabled>Confirm Pickup</button>
              </td>
             {% else %}
               <td>
                 <a href="{% url 'employees:confirmed_pickup' customer.id %}">
-                  <button>Confirm Pickup</button>
+                  <button type="button" class="form-control">Confirm Pickup</button>
                 </a>
               </td>
             {% endif %}
@@ -43,13 +44,13 @@
       </div>
       <div class="col-4 "></div>
       </div>
-  </div>
+  <!-- </div> -->
   {% else %}
-    <div class="container">
+    <!-- <div class="container"> -->
     <p>You are at the employee index, but you are not logged in.</p>
     <a href="{% url 'login' %}">Log In</a>
     <a href="{% url 'accounts:register' %}">Sign Up</a>
-    </div>
+    <!-- </div> -->
     {% endif %}
 
 {% endblock %}
