--- a/trash_collector/templates/base.html
+++ b/trash_collector/templates/base.html
@@ -2,12 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
         rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
         crossorigin="anonymous">
   <title>{% block title %}{% endblock %}</title>
 </head>
   <body>
+
   {% if user.is_authenticated %}
     {% for group in user.groups.all%}
       {% if group.name == "Customers" %}
@@ -74,11 +78,12 @@
       {% endif %}
     {% endfor %}
   {% endif %}
+  <div class="container">
     <main>
       <h1>{% block header %} {% endblock %}</h1>
-      {% block content %}
-      {% endblock %}
+      {% block content %} {% endblock %}
     </main>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
             integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
             crossorigin="anonymous"></script>
