--- a/trash_collector/customers/templates/customers/create.html
+++ b/trash_collector/customers/templates/customers/create.html
@@ -3,16 +3,22 @@
 
 {% block title %} Customer Account {% endblock %}
 
-{% block header %} Create Account{% endblock %}
+{% block header %}<h1 class="display-1 text-center">Create Account</h1> {% endblock %}
 
 {% block content %}
-  <form action="{% url 'customers:create' %}" method="POST">
-    {% csrf_token %}
-    Name:<input type="text" name="name" id="name"><br>
-    Weekly Pickup Day:<input type="text" name="weekly_pickup_day" id="weekly_pickup_day"><br>
-    One Time Pickup Date:<input type="date" name="one_time_pickup" id="one_time_pickup"><br>
-    Address:<input type="text" name="address" id="address"><br>
-    Zip Code:<input type="text" name="zip_code" id="zip_code"><br>
-    <input type="submit" value="Create Account">
-</form>
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6 mb-3">
+    <form class="form-control" action="{% url 'customers:create' %}" method="POST">
+      {% csrf_token %}
+      Name:<input class="form-control" type="text" name="name" id="name"><br>
+      Weekly Pickup Day:<input class="form-control" type="text" name="weekly_pickup_day" id="weekly_pickup_day"><br>
+      One Time Pickup Date:<input class="form-control" type="date" name="one_time_pickup" id="one_time_pickup"><br>
+      Address:<input  class="form-control" type="text" name="address" id="address"><br>
+      Zip Code:<input class="form-control" type="text" name="zip_code" id="zip_code"><br>
+      <input type="submit" class="form-control" value="Create Account">
+    </form>
+  </div>
+  <div class="col-3"></div>
+</div>
 {% endblock %}
