--- a/trash_collector/templates/registration/login.html
+++ b/trash_collector/templates/registration/login.html
@@ -2,13 +2,17 @@
 
 {% block title %} Login Page {% endblock %}
 
-{% block header %} Login Page {% endblock %}
-
+{% block header %}<h1 class="display-1 text-center">Login Page</h1>{% endblock %}
 {% block content %}
-<h2>Log In</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Log In</button>
-</form>
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6 mb-3">
+    <form class="form-control" method="post">
+      {% csrf_token %}
+      {{ form }}
+      <button class="form-control" type="submit">Log In</button>
+    </form>
+  </div>
+  <div class="col-3"></div>
+</div>
 {% endblock %}
