--- a/trash_collector/templates/registration/register.html
+++ b/trash_collector/templates/registration/register.html
@@ -2,13 +2,18 @@
 
 {% block title %} Register Account {% endblock %}
 
-{% block header %} Register Account {% endblock %}
+{% block header %} <h1 class="display-1 text-center">Register Account</h1>{% endblock %}
 
 {% block content %}
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign Up</button>
-  </form>
+<div class="row">
+  <div class="col-3"></div>
+  <div class="col-6 mb-3">
+    <form class="form-control" method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <button class="form-control" type="submit">Sign Up</button>
+    </form>
+  </div>
+  <div class="col-3"></div>
+</div>
 {% endblock %}
