--- a/trash_collector/customers/templates/customers/edit.html
+++ b/trash_collector/customers/templates/customers/edit.html
@@ -15,58 +15,65 @@
 
 {% block header %}
   {% if specific_option == 1 %}
-    <h1 class="display-1 text-center">Change Weekly Pickup Day</h1>
+    <h1 class="display-1 text-center" id="title">Change Weekly Pickup Day</h1>
   {% elif specific_option == 2 %}
-    <h1 class="display-1 text-center">Suspend Account</h1>
+    <h1 class="display-1 text-center" id="title">Suspend Account</h1>
   {% elif specific_option == 3 %}
-    <h1 class="display-1 text-center">One-time Pickup</h1>
+    <h1 class="display-1 text-center" id="title">One-time Pickup</h1>
   {% elif specific_option == 4 %}
-    <h1 class="display-1 text-center">Edit Account Info</h1>
+    <h1 class="display-1 text-center" id="title">Edit Account Info</h1>
   {% endif %}
 {% endblock %}
 
 {% block content %}
-  <div class="row">
-    <div class="col-4"></div>
-    <div class="col-4 mb-3"> <!-- Content start -->
-      {% if specific_option == 1 %}
+  <div class="row row-cols-auto d-flex justify-content-center">
+    <div class="col"></div>
+    <div class="col"> <!-- Content start -->
+      <div class="mb-3"> <!-- Start Form -->
+        {% if specific_option == 1 %}
         <!-- Change Weekly Pickup -->
         <form action="{% url 'customers:edit' 1 %}" method="POST">
         {% csrf_token %}
-          Weekly Pickup Day:
+          <p class="display-5 text-center" style="text-decoration:underline;">Weekly Pickup Day</p>
           <input type="text" class="form-control" name="weekly_pickup_day" id="weekly_pickup_day" value="{{specific_customer.weekly_pickup_day}}"><br>
           <input type="submit" class="form-control" value="Update Account">
         </form>
 
-      {% elif specific_option == 2 %}
+        {% elif specific_option == 2 %}
         <!-- Suspend Account -->
         <form action="{% url 'customers:edit' 2 %}" method="POST">
         {% csrf_token %}
-          Start Break:<input type="date" class="form-control" name="start_suspension" id="start_suspension" value='{{ specific_customer.start_suspension }}'><br>
-          End Break:<input type="date" class="form-control" name="end_suspension" id="end_suspension" value='{{ specific_customer.end_suspension }}'><br>
+          <p class="display-5 text-center" style="text-decoration:underline;">Start Break</p>
+          <input type="date" class="form-control" name="start_suspension" id="start_suspension" value='{{ specific_customer.start_suspension }}'><br>
+          <p class="display-5 text-center" style="text-decoration:underline;">End Break</p>
+          <input type="date" class="form-control" name="end_suspension" id="end_suspension" value='{{ specific_customer.end_suspension }}'><br>
           <input type="submit" class="form-control" value="Update Account">
         </form>
 
-      {% elif specific_option == 3 %}
+        {% elif specific_option == 3 %}
         <!-- One-time pickup -->
         <form action="{% url 'customers:edit' 3 %}" method="POST">
         {% csrf_token %}
-          One Time Pickup Date:
+          <p class="display-5 text-center" style="text-decoration:underline;">One Time Pickup</p>
           <input type="date" class="form-control" name="onetime_pickup" id="onetime_pickup" value="{{specific_customer.onetime_pickup}}"><br>
           <input type="submit" class="form-control" value="Update Account">
         </form>
 
-      {% elif specific_option == 4 %}
+        {% elif specific_option == 4 %}
         <!-- Edit Account Info -->
         <form action="{% url 'customers:edit' 4 %}" method="POST">
         {% csrf_token %}
-          Name:<input type="text" class="form-control" name="name" id="name" value="{{specific_customer.name}}"><br>
-          Address:<input type="text" class="form-control" name="address" id="address" value="{{specific_customer.address}}"><br>
-          Zip Code:<input type="text" class="form-control" name="zip_code" id="zip_code" value='{{ specific_customer.zip_code }}'><br>
+          <p class="display-5 text-center" style="text-decoration:underline;">Name</p>
+          <input type="text" class="form-control" name="name" id="name" value="{{specific_customer.name}}"><br>
+          <p class="display-5 text-center" style="text-decoration:underline;">Address</p>
+          <input type="text" class="form-control" name="address" id="address" value="{{specific_customer.address}}"><br>
+          <p class="display-5 text-center" style="text-decoration:underline;">Zip Code</p>
+          <input type="text" class="form-control" name="zip_code" id="zip_code" value='{{ specific_customer.zip_code }}'><br>
           <input type="submit" class="form-control" value="Update Account">
         </form>
-      {% endif %}
+        {% endif %}
+      </div> <!-- End Form -->
     </div> <!-- Content end -->
-    <div class="col-4"></div>
+    <div class="col"></div>
   </div>
 {% endblock %}
