--- a/trash_collector/employees/templates/employees/create.html
+++ b/trash_collector/employees/templates/employees/create.html
@@ -3,19 +3,21 @@
 
 {% block title %} Employee Account {% endblock %}
 
-{% block header %}<h1 class="display-1 text-center">Create Account</h1>{% endblock %}
+{% block header %}<h1 class="display-1 text-center" id="title">Create Account</h1>{% endblock %}
 
 {% block content %}
-<div class="row">
-  <div class="col-3"></div>
-  <div class="col-6 mb-3">
-    <form class="form-control" action="{% url 'employees:create' %}" method="POST">
+<div class="row row-cols-auto d-flex justify-content-center">
+  <div class="col"></div>
+  <div class="col">
+    <div class="mb-3">
+      <form class="form-control" action="{% url 'employees:create' %}" method="POST">
       {% csrf_token %}
       Name:<input class="form-control" type="text" name="name" id="name"><br>
       Zip Code:<input class="form-control" type="text" name="zip_code" id="zip_code"><br>
       <input class="form-control" type="submit" value="Create Account">
     </form>
+    </div>
   </div>
-  <div class="col-3"></div>
+  <div class="col"></div>
 </div>
 {% endblock %}
