--- a/trash_collector/templates/registration/login.html
+++ b/trash_collector/templates/registration/login.html
@@ -2,17 +2,18 @@
 
 {% block title %} Login Page {% endblock %}
 
-{% block header %}<h1 class="display-1 text-center">Login Page</h1>{% endblock %}
+{% block header %}<h1 class="display-1 text-center" id="title">Login Page</h1>{% endblock %}
+
 {% block content %}
-<div class="row">
-  <div class="col-3"></div>
-  <div class="col-6 mb-3">
+<div class="row row-cols-auto d-flex justify-content-center">
+  <div class="col"></div>
+  <div class="col">
     <form class="form-control" method="post">
       {% csrf_token %}
       {{ form }}
       <button class="form-control" type="submit">Log In</button>
     </form>
   </div>
-  <div class="col-3"></div>
+  <div class="col"></div>
 </div>
 {% endblock %}
