--- a/trash_collector/templates/registration/register.html
+++ b/trash_collector/templates/registration/register.html
@@ -8,7 +8,7 @@
 <div class="row row-cols-auto justify-content-center">
   <div class="col"></div>
   <div class="col">
-    <div class="form-control-registration">
+    <div class="form-control">
       <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
